crates/fig-lexer/tests/snapshots/integration_tests__expressions__as_cast.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: cast_ops
- LParen
- Ident: x
- Colon
- I32
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: as_u8
- Eq
- Ident: x
- As
- U8
- Newline
- Let
- Ident: as_f64
- Eq
- Ident: x
- As
- F64
- Newline
- Let
- Ident: as_usize
- Eq
- Ident: x
- As
- USize
- Newline
- Let
- Ident: chain
- Eq
- Ident: x
- As
- I64
- As
- F64
- Newline
- Pass
- Newline
- Dedent
