crates/fig-lexer/tests/snapshots/integration_tests__expressions__call_basic.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: add
- LParen
- Ident: a
- Colon
- I32
- Comma
- Ident: b
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Indent
- Return
- Ident: a
- Plus
- Ident: b
- Newline
- Dedent
- Func
- Ident: demo
- LParen
- RParen
- Arrow
- "Null"
- Newline
- Indent
- Let
- Ident: r1
- Eq
- Ident: add
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Comma
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- RParen
- Newline
- Let
- Ident: r2
- Eq
- Ident: add
- LParen
- Ident: r1
- Comma
- Ident: r1
- RParen
- Newline
- Let
- Ident: r3
- Eq
- Ident: add
- LParen
- Ident: add
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Comma
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- RParen
- Comma
- Ident: add
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "3"
    suffix: ~
- Comma
- IntegerLiteral:
    base: Decimal
    digits: "4"
    suffix: ~
- RParen
- RParen
- Newline
- Pass
- Newline
- Dedent
