crates/fig-lexer/tests/snapshots/integration_tests__expressions__effect_call_suffix.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: effect_calls
- LParen
- Ident: v
- Colon
- Star
- Mut
- Ident: Vec
- LBracket
- I32
- RBracket
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Ident: v
- Dot
- Ident: push
- Bang
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "42"
    suffix: ~
- RParen
- Newline
- Ident: v
- Dot
- Ident: pop
- Bang
- LParen
- RParen
- Newline
- Ident: v
- Dot
- Ident: clear
- Bang
- LParen
- RParen
- Newline
- Pass
- Newline
- Dedent
