crates/fig-lexer/tests/snapshots/integration_tests__expressions__logical.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: logical_ops
- LParen
- Ident: a
- Colon
- Bool
- Comma
- Ident: b
- Colon
- Bool
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: and
- Eq
- Ident: a
- AndAnd
- Ident: b
- Newline
- Let
- Ident: or
- Eq
- Ident: a
- OrOr
- Ident: b
- Newline
- Pass
- Newline
- Dedent
